--- a/Local Tier List/Components/Pages/TierListComp.razor
+++ b/Local Tier List/Components/Pages/TierListComp.razor
@@ -69,6 +69,12 @@
 			Minimal Mode
 		</label>
 	</div>
+	<div class="form-check">
+		<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" @onchange="() => Toggle(ref NoImg)">
+		<label class="form-check-label" for="flexCheckDefault">
+			Text Only
+		</label>
+	</div>
 	<div class="row col-12 d-flex darken-50 flex-column text-light m-2">
 		<div class="d-flex flex-wrap flex-fill flex-row">
 			<input type="text" class="spinput rounded col-4 flex-fill mx-2 text-light p-2" @bind="@selected.name" placeholder="Tierlist Name">
@@ -91,7 +97,7 @@
 								{
 									<MudTooltip class="col-2" Color="Color.Transparent">
 										<ChildContent>
-											<TierItemComp item="@pair.Value.items[i]" id="@i" isminimal="@minimal" OnItemSelect="Select" OnItemDrag="StartDrag" OnItemDragStop="StopDrag" OnItemOver="OverHere" OnItemOut="OuttaHere"></TierItemComp>
+											<TierItemComp item="@pair.Value.items[i]" id="@i" isminimal="@minimal" NoImage="@NoImg" OnItemSelect="Select" OnItemDrag="StartDrag" OnItemDragStop="StopDrag" OnItemOver="OverHere" OnItemOut="OuttaHere"></TierItemComp>
 										</ChildContent>
 										<TooltipContent>
 											<div class="text-light darken-95 rounded p-3 m-0">
@@ -102,7 +108,7 @@
 								}
 								else
 								{
-									<TierItemComp item="@pair.Value.items[i]" id="@i" isminimal="@minimal" OnItemSelect="Select" OnItemDrag="StartDrag" OnItemDragStop="StopDrag" OnItemOver="OverHere" OnItemOut="OuttaHere"></TierItemComp>
+									<TierItemComp item="@pair.Value.items[i]" id="@i" isminimal="@minimal" NoImage="@NoImg" OnItemSelect="Select" OnItemDrag="StartDrag" OnItemDragStop="StopDrag" OnItemOver="OverHere" OnItemOut="OuttaHere"></TierItemComp>
 								}
 							}
 						}
@@ -151,6 +157,7 @@
 	bool yousure;
 	bool showcase = false;
 	bool minimal = false;
+	bool NoImg = false;
 	string filter = "";
 
 	string dragtier = ""; // which tier mouse is over
