--- a/Local Tier List/Components/Pages/Home.razor
+++ b/Local Tier List/Components/Pages/Home.razor
@@ -27,7 +27,7 @@
 			<div class="row col-sm-4 col-md-3 col-lg-2 mx-0 my-1 d-flex flex-fill flex-wrap">
 				<div class="row p-0 col-12 d-flex flex-fill">
 					<div class="d-flex col-12 p-0 flex-nowrap flex-fill flex-row">
-						<h5 class="clickable flex-fill p-0 m-0 text-center rounded template" @onclick="Add"> New Tierlist </h5>
+						<h5 class="clickable flex-fill p-0 m-0 text-center rounded template" @onclick="NewTierList"> New Tierlist </h5>
 					</div>
 				</div>
 			</div>
@@ -83,9 +83,10 @@
 		}
 	}
 
-	void Add()
+	void NewTierList()
 	{
-		li.TierLists.Add(new TierList($"Tierlist {li.TierLists.Count+1}"));
+		li.TierLists.Add(new TierList($"Tierlist {li.TierLists.Count + 1}", true));
+		Select(li.TierLists.Last());
 	}
 
 	void YouSure(TierList l)
