--- a/Local Tier List/Components/_Imports.razor
+++ b/Local Tier List/Components/_Imports.razor
@@ -8,5 +8,5 @@
 @using Local_Tier_List
 @using Local_Tier_List.Components
 @using Local_Tier_List.Data
+@using LocalTierListLib
 @using MudBlazor
-@inject ITier itier
