--- a/LocalTierListLib/TierItemComp.razor
+++ b/LocalTierListLib/TierItemComp.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.Extensions.Logging
 @using System.Globalization
+@using MudBlazor
 @implements IDisposable
 @inject ILogger<TierItemComp> Logger
 @inject IJSRuntime JSRuntime
