--- a/LocalTierListLib/TierListComp.razor
+++ b/LocalTierListLib/TierListComp.razor
@@ -2,6 +2,7 @@
 @using System.Globalization
 @using System.Collections
 @using Microsoft.Extensions.Logging
+@using MudBlazor
 @inject ILogger<TierListComp> Logger
 @inject IJSRuntime JSRuntime
 <link href="css/charactercolor.css" rel="stylesheet" />
@@ -60,24 +61,6 @@
 			</div>
 		}
 	}
-	<div class="form-check">
-		<input class="form-check-input" type="checkbox" value="" id="showcaseform" @onchange="() => Toggle(ref showcase)">
-		<label class="form-check-label" for="showcaseform">
-			Showcase Mode
-		</label>
-	</div>
-	<div class="form-check">
-		<input class="form-check-input" type="checkbox" value="" id="minimalform" @onchange="() => Toggle(ref minimal)">
-		<label class="form-check-label" for="minimalform">
-			Minimal Mode
-		</label>
-	</div>
-	<div class="form-check">
-		<input class="form-check-input" type="checkbox" value="" id="textform" @onchange="() => Toggle(ref NoImg)">
-		<label class="form-check-label" for="textform">
-			Text Only
-		</label>
-	</div>
 	<div class="row col-12 d-flex darken-50 flex-column text-light m-2">
 		<div class="d-flex flex-wrap flex-fill flex-row">
 			<input type="text" class="spinput rounded col-4 flex-fill mx-2 text-light p-2" @bind="@selected.name" placeholder="Tierlist Name">
@@ -163,7 +146,7 @@
 	public required TierList selected { get; set; }
 
 	[Parameter]
-	public required TierLister tl { get; set; }
+	public TierLister tl { get; set; }
 
 	Tier? selectier;
 
@@ -171,9 +154,14 @@
 	string selecitemtier = "";
 
 	bool yousure;
-	bool showcase = false;
-	bool minimal = false;
-	bool NoImg = false;
+
+	[Parameter]
+	public bool showcase { get; set; }
+	[Parameter]
+	public bool minimal { get; set; }
+	[Parameter]
+	public bool NoImg { get; set; }
+
 	string filter = "";
 	string temptiername = "";
 	ElementReference temptier;
