--- a/Local Tier List/Components/Layout/MainLayout.razor
+++ b/Local Tier List/Components/Layout/MainLayout.razor
@@ -2,11 +2,11 @@
 @using MudBlazor
 
 <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-<div class="page">
+<div class="page safe-area">
     @*<div class="sidebar">
         <NavMenu />
     </div>*@
-    <main class="d-flex m-0 bg-subtlegrad p-0 bg-dark">
+    <main class="d-flex m-0 bg-subtlegrad px-2 py-4 bg-dark">
         <div class="col-12 justify-content-center m-0 bg-subtlegrad p-0 bg-dark">
             @Body
         </div>
@@ -19,3 +19,12 @@
 
 <script src="DragDropPolyfil.js"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
+<style>
+    .safe-area {
+        padding-top: env(safe-area-inset-top);
+        padding-bottom: env(safe-area-inset-bottom);
+        padding-left: env(safe-area-inset-left);
+        padding-right: env(safe-area-inset-right);
+    }
+</style>
