Added Snacks for notifications. Minor improvements on Display settings checkboxes. Added replace all option for import

--- a/Local Tier List/Components/Layout/MainLayout.razor
+++ b/Local Tier List/Components/Layout/MainLayout.razor
@@ -16,6 +16,7 @@
 @* Required *@
 <MudThemeProvider IsDarkMode="true" />
 <MudPopoverProvider />
+<MudSnackbarProvider />
 
 <script src="DragDropPolyfil.js"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
